// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Radio checked 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid rgba(128,130,133,1);
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
}

.c0 {
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0 > input:disabled ~ .c1 {
  background-color: rgba(229,229,229,1);
}

.c0 > input:disabled ~ .c3 {
  opacity: 0.7;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: rgba(242,103,34,1);
  border-radius: 50%;
}

<label
  class="c0"
>
  <input
    checked=""
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    
  </span>
</label>
`;

exports[`Snapshots Radio disabled 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid rgba(128,130,133,1);
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
}

.hnkhzj:hover .c1,
.hnkhzj > input:focus ~ .c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.hnkhzj > input:disabled ~ .c1 {
  background-color: rgba(229,229,229,1);
}

.hnkhzj > input:disabled ~ .c3 {
  opacity: 0.7;
}

.hnkhzj > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: rgba(242,103,34,1);
  border-radius: 50%;
}

.c0 {
  cursor: pointer;
  cursor: not-allowed;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0 > input:disabled ~ .c1 {
  background-color: rgba(229,229,229,1);
}

.c0 > input:disabled ~ .c3 {
  opacity: 0.7;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: rgba(242,103,34,1);
  border-radius: 50%;
}

.c0:hover .c1 {
  box-shadow: none;
}

<label
  class="c0"
  disabled=""
>
  <input
    disabled=""
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    
  </span>
</label>
`;

exports[`Snapshots Radio unchecked 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid rgba(128,130,133,1);
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
}

.c0 {
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0 > input:disabled ~ .c1 {
  background-color: rgba(229,229,229,1);
}

.c0 > input:disabled ~ .c3 {
  opacity: 0.7;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: rgba(242,103,34,1);
  border-radius: 50%;
}

<label
  class="c0"
>
  <input
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    
  </span>
</label>
`;

exports[`Snapshots Render children 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid rgba(128,130,133,1);
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
}

.c0 {
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0 > input:disabled ~ .c1 {
  background-color: rgba(229,229,229,1);
}

.c0 > input:disabled ~ .c3 {
  opacity: 0.7;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: rgba(242,103,34,1);
  border-radius: 50%;
}

.cWBQOU:hover .c1,
.cWBQOU > input:focus ~ .c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.cWBQOU > input:disabled ~ .c1 {
  background-color: rgba(229,229,229,1);
}

.cWBQOU > input:disabled ~ .c3 {
  opacity: 0.7;
}

.cWBQOU > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: rgba(242,103,34,1);
  border-radius: 50%;
}

.cWBQOU:hover .c1 {
  box-shadow: none;
}

<label
  class="c0"
>
  <input
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    Hello
  </span>
</label>
`;
